--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Wrong Site!</h1>
-        <p>You probably meant to go to my actual website, <a href="https://aishani-singh.github.io/">aishani-singh.github.io</a>, instead of <a href="https://aishanisingh.github.io">aishanisingh.github.io</a>. You were just missing a hyphen, close enough! </p>
+        <p>You probably meant to go to my actual website, aishani-singh.github.io, instead of this website. You were just missing a hyphen, close enough! </p>
         <p>Don't worry, you'll be automatically redirected in a couple seconds.</p>
         <script>
             setTimeout(() => {window.location.href = "https://aishani-singh.github.io/"}, 5000);
